fix: stable scrollbar

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -18,7 +18,8 @@ html.dark {
 
 body {
   height: 100%;
-  overflow: auto;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 #nprogress {
